<resources>
    <string name="app_name">QuestionShare</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_to_question">Go to Question</string>
    <string name="go_to_mcq_question">Go to MCQ question</string>
    <string name="go_to_creative_question">Go to Creative Question</string>
    <string name="creative_question">Creative Question</string>
    <string name="log_out">Log Out</string>
    <string name="goto_admin_prompt">Goto Admin Prompt</string>
    <string name="enter_admin_passcode">Enter admin passcode</string>
    <string name="unlock_question_panel">Unlock Question Panel</string>
    <string name="enter_your_question">Enter your Question?</string>
    <string name="_1">1</string>
    <string name="add">Add</string>
    <string name="add_question">Add question</string>
</resources>
