<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Views.ProfileView">
    <TextView
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textSize="42sp"
        android:layout_marginBottom="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/user_view"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/goto_question_view"
        android:text="@string/go_to_question"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/log_out"
        android:text="@string/log_out"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/goto_admin_prompt"
        android:text="@string/goto_admin_prompt"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>